<resources>
    <string name="app_name">Calculadora</string>
    <string name="titulo">CALCULADORA</string>
    <string name="operaciones">operaciones</string>
    <string name="Calcular">Calcular</string>
    <string name="Borrar">Borrar</string>
    <string name="sumar">sumar</string>
    <string name="restar">restar</string>
    <string name="multiplicar">multiplicar</string>
    <string name="dividir">dividir</string>
    <string name="primer_numero">primer_numero</string>
    <string name="segunfo_numero">Segundo_numero</string>
    <string name="error">Digite el primer numero</string>
    <string name="error_dos">Digite el primer dos</string>
    <string name="error_tres">No puede dividir entre cero</string>
    <string-array name="opciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </string-array>
</resources>
